adding DO 1